{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 119,
  "lineage": "568626b5-5acc-1102-b828-627321cc79cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06b9e7d21e3602651",
            "domain": "vpc",
            "id": "eipalloc-08b08075084ef98be",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-06dd8693dcec64dfb",
            "private_dns": "ip-10-0-0-166.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.166",
            "public_dns": "ec2-15-165-248-26.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.248.26",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:internet-gateway/igw-08b5874e9c98a69d5",
            "id": "igw-08b5874e9c98a69d5",
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b08075084ef98be",
            "connectivity_type": "public",
            "id": "nat-0b45d76ad782f4488",
            "network_interface_id": "eni-06dd8693dcec64dfb",
            "private_ip": "10.0.0.166",
            "public_ip": "15.165.248.26",
            "subnet_id": "subnet-097561cf8b67eb727",
            "tags": {
              "Name": "dev-nat_gw"
            },
            "tags_all": {
              "Name": "dev-nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08b5874e9c98a69d5",
            "id": "r-rtb-0ab8ec336c706e91d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab8ec336c706e91d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:route-table/rtb-0decfbc699a6e6768",
            "id": "rtb-0decfbc699a6e6768",
            "owner_id": "001243379513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-database_rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-database_rt-1"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:route-table/rtb-0d78cca9f08d9bfcb",
            "id": "rtb-0d78cca9f08d9bfcb",
            "owner_id": "001243379513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b45d76ad782f4488",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private_rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private_rt-1"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:route-table/rtb-0ab8ec336c706e91d",
            "id": "rtb-0ab8ec336c706e91d",
            "owner_id": "001243379513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b5874e9c98a69d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public_rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public_rt"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acfdc7a2afc16a50",
            "route_table_id": "rtb-0decfbc699a6e6768",
            "subnet_id": "subnet-0e60f00696aadd722"
          },
          "dependencies": [
            "aws_route_table.database_rt",
            "aws_subnet.db_subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbf1ea107f7be05e",
            "route_table_id": "rtb-0decfbc699a6e6768",
            "subnet_id": "subnet-0353d3896616d7e90"
          },
          "dependencies": [
            "aws_route_table.database_rt",
            "aws_subnet.db_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0151082bd575d999d",
            "route_table_id": "rtb-0d78cca9f08d9bfcb",
            "subnet_id": "subnet-00358455df2cefe57"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.my_private_subnets",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_vpc",
            "aws_eip.nat_eip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5e20414bcef553",
            "route_table_id": "rtb-0d78cca9f08d9bfcb",
            "subnet_id": "subnet-01476e27f0519e607"
          },
          "dependencies": [
            "aws_subnet.my_private_subnets",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_vpc",
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e3772961382dbd",
            "route_table_id": "rtb-0ab8ec336c706e91d",
            "subnet_id": "subnet-097561cf8b67eb727"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086f834081e02c589",
            "route_table_id": "rtb-0ab8ec336c706e91d",
            "subnet_id": "subnet-0f3a79b716da1ab17"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:subnet/subnet-0e60f00696aadd722",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0e60f00696aadd722",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-db-subnet-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-db-subnet-01"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:subnet/subnet-0353d3896616d7e90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0353d3896616d7e90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-db-subnet-02"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-db-subnet-02"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:subnet/subnet-00358455df2cefe57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-00358455df2cefe57",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-01"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:subnet/subnet-01476e27f0519e607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-01476e27f0519e607",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-02"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-02"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:subnet/subnet-097561cf8b67eb727",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-097561cf8b67eb727",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-01"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:subnet/subnet-0f3a79b716da1ab17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f3a79b716da1ab17",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-02"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-02"
            },
            "vpc_id": "vpc-0a4bad91a3699b0b5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:001243379513:vpc/vpc-0a4bad91a3699b0b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec0e20f2510f2aaa",
            "default_route_table_id": "rtb-0774da5dc60f4ca62",
            "default_security_group_id": "sg-02ebfe2102ba6c116",
            "dhcp_options_id": "dopt-41ee8c2a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a4bad91a3699b0b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0774da5dc60f4ca62",
            "owner_id": "001243379513",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}